--- a/client/src/assets/admin_dashboard.css
+++ b/client/src/assets/admin_dashboard.css
@@ -16,7 +16,9 @@ h1 {
   color: red;
   text-align: center;
 }
-
+.event-category {
+  color: lightgray;
+}
 .events-table {
   width: 100%;
   border-collapse: collapse;
